# shoki-ai

./: .gitignore  README.md  pyproject.toml  recording.caf
.github/workflows/: ci-compliance-service.yml  python-unit-tests.yml
ai/agents/: Makefile  main.py  requirements.txt
ai/agents/compliance-agent/: agent.py
ai/agents/compliance_agent/: agent.py
ai/agents/orchestrator_agent/: agent.py  prompt.py
ai/agents/soap_agent/: prompt.txt
backend/compliance/: audit_generation.py  main.py
backend/observability/traces/: audit_generation_2025-08-11T01:42:43.536737.json  audit_generation_2025-08-11T01:59:23.617929.json  (+8 more)
compliance-agent/: agent.py
prompts/: compliance_experiment.py  hippa_compliance_prompts.py
services/compliance-service/: requirements.txt
services/compliance_service/: main.py  otel.py  requirements.txt
services/datastore_service/: Dockerfile  Makefile  main.py  requirements.txt
services/ingest_worker/: Makefile  main.py  requirements.txt  test_pubsub_push.sh
services/orchestrator_service/: Dockerfile  Makefile  main.py  otel.py  requirements.txt  test_pubsub_push.sh
services/privacy_service/: Dockerfile  Makefile  main.py  otel.py  requirements.txt
services/soap_service/: .gitignore  main.py  requirements.txt
services/transcribe_service/: Dockerfile  Makefile  main.py  requirements.txt  test_pubsub_push.sh
services/transcription_service/: main.py
tests/compliance/: test_main.py
tests/utils/: test_evaluate.py  test_generate.py  test_run_experiment.py
tools/compliance/: Makefile  compliance.py  mcp_server.py
tools/datastore/: datastore.py  mcp_server.py
tools/privacy/: Makefile  mcp_server.py  privacy.py
tools/soap/: Makefile  mcp_server.py  soap.py
tools/transcribe/: Dockerfile  Makefile  mcp_server.py  requirements.txt  transcribe.py
utils/: evaluate.py  generate.py  run_experiment.py
(+64 files in other folders)
