[project]
name = "shoki-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "google-cloud-aiplatform[adk,agent-engines]>=1.108.0",
    "google-cloud-firestore>=2.21.0",
    "litellm>=1.75.5.post1",
    "nest-asyncio>=1.6.0",
    "openai>=1.99.6",
    "pip>=25.2",
    "presidio-analyzer>=2.2.359",
    "presidio-anonymizer>=2.2.359",
    "pytest>=8.4.1",
    "requests>=2.32.4",
]
