[project]
name = "shoki-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "baml-py>=0.206.1",
    "fastapi[standard]>=0.116.1",
    "google-cloud-aiplatform[adk,agent-engines]>=1.108.0",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-pubsub>=2.31.1",
    "google-cloud-tasks>=2.19.3",
    "httpx[http2]>=0.28.1",
    "litellm>=1.75.5.post1",
    "nest-asyncio>=1.6.0",
    "openai>=1.99.6",
    "openai-whisper>=20250625",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-exporter-gcp-trace>=1.9.0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-instrumentation-httpx>=0.57b0",
    "opentelemetry-sdk>=1.36.0",
    "pip>=25.2",
    "presidio-analyzer>=2.2.359",
    "presidio-anonymizer>=2.2.359",
    "pytest>=8.4.1",
    "requests>=2.32.4",
]
